update with VGG_variant

--- a/cutlass_baselines/Makefile
+++ b/cutlass_baselines/Makefile
@@ -3,10 +3,15 @@ INC = 	-I../cutlass/include \
 		-I../cutlass/examples/common
 FLAG = -std=c++11 -O3 -w -arch=sm_86 
 
-all: alexnet
+all: vgg_variant 
+# alexnet
 
-alexnet: alexnet.cu 
+alexnet: alexnet.cu gemm.cuh config.h
 	nvcc $(INC) $(FLAG) $< -o $@ 
+
+vgg_variant: vgg_variant.cu gemm.cuh config.h
+	nvcc $(INC) $(FLAG) $< -o $@ 
+
 
 clean:
 	rm -r alexnet 
