update with vgg net

--- a/APNN-TC/Makefile
+++ b/APNN-TC/Makefile
@@ -3,13 +3,10 @@ NVCC_FLAG = -std=c++11 -O3 -w  -arch=sm_86 -maxrregcount=64 -rdc=true
 LIBS = -ljpeg
 INC = -I../APNN_sc21_backup/src/bmmaTensorCoreGemm/src -I../APNN_sc21_backup/src/Common
 
-all: imagenet_alexnet
-# imagenet_vgg imagenet_resnet
-
-# all: 
-# 	imagenet_alexnet \
-# 	imagenet_vgg \
-# 	imagenet_resnet
+all: 
+	imagenet_alexnet \
+	imagenet_vgg \
+	imagenet_resnet
 	 
 imagenet_alexnet: alexnet.cu param.h kernel.cuh data.h data.cpp utility.h
 	$(NVCC) $(NVCC_FLAG) $(INC) -o $@ alexnet.cu data.cpp $(LIBS)
