--- a/APNN-TC/Makefile
+++ b/APNN-TC/Makefile
@@ -1,21 +1,23 @@
 NVCC = nvcc
 NVCC_FLAG = -std=c++11 -O3 -w  -arch=sm_86 -maxrregcount=64 -rdc=true 
 LIBS = -ljpeg
-INC = -I../APNN_sc21_backup/src/bmmaTensorCoreGemm/src -I../APNN_sc21_backup/src/Common
+INC = -I../APNN_sc21_backup/src/bmmaTensorCoreGemm/src \
+	-I../APNN_sc21_backup/src/Common
+DEP = src/param.h src/kernel.cuh src/data.h src/data.cpp src/utility.h
 
-all: imagenet_alexnet imagenet_vgg imagenet_resnet
-	 
-imagenet_alexnet: alexnet.cu param.h kernel.cuh data.h data.cpp utility.h
-	$(NVCC) $(NVCC_FLAG) $(INC) -o $@ alexnet.cu data.cpp $(LIBS)
+all: alexnet vgg resnet18
 
-imagenet_vgg: imagenet_vgg.cu param.h kernel.cuh data.h data.cpp utility.h
-	$(NVCC) $(NVCC_FLAG) $(INC) -o $@ imagenet_vgg.cu data.cpp $(LIBS)
+alexnet: src/alexnet.cu $(DEP)
+	$(NVCC) $(NVCC_FLAG) $(INC) -o $@ src/alexnet.cu src/data.cpp $(LIBS)
 
-imagenet_resnet: imagenet_resnet.cu param.h kernel.cuh data.h data.cpp utility.h
-	$(NVCC) $(NVCC_FLAG) $(INC) -o $@ imagenet_resnet.cu data.cpp $(LIBS)
+vgg: src/vgg.cu $(DEP)
+	$(NVCC) $(NVCC_FLAG) $(INC) -o $@ src/vgg.cu src/data.cpp $(LIBS)
+
+resnet18: src/resnet18.cu $(DEP)
+	$(NVCC) $(NVCC_FLAG) $(INC) -o $@ src/resnet18.cu src/data.cpp $(LIBS)
 
 clean:
-	rm imagenet_resnet \
-		imagenet_alexnet \
-		imagenet_vgg 
+	rm alexnet \
+		vgg \
+		resnet18 
 
