--- a/cutlass_baselines/Makefile
+++ b/cutlass_baselines/Makefile
@@ -1,6 +1,12 @@
 INC = 	-I../cutlass/include \
 		-I../cutlass/tools/util/include \
-		-I../cutlass/examples/common
+		-I../cutlass/examples/common \
+		-Icudnn/include
+
+LIB = -L cudnn/lib64\
+ 		-L /usr/local/lib
+
+LK = -lcudnn
 
 FLAG = -std=c++11 -O3 -w -arch=sm_86 
 
@@ -11,13 +17,13 @@ all: alexnet  \
 	 resnet18
 
 alexnet: src/alexnet.cu $(DEP)
-	nvcc $(INC) $(FLAG) $< -o $@ 
+	nvcc $(INC) $(LIB) $(FLAG) $< -o $@ $(LK)
 
 vgg_variant: src/vgg_variant.cu $(DEP)
-	nvcc $(INC) $(FLAG) $< -o $@ 
+	nvcc $(INC) $(LIB) $(FLAG) $< -o $@ $(LK)
 
 resnet18: src/resnet18.cu $(DEP)
-	nvcc $(INC) $(FLAG) $< -o $@ 
+	nvcc $(INC) $(LIB) $(FLAG) $< -o $@ $(LK)
 
 clean:
 	rm -r alexnet \
