--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "Bench_CUTLASS_A100"]
 	path = Bench_CUTLASS_A100
 	url = git@github.com:YukeWang96/Bench_CUTLASS_A100.git
-[submodule "cudnn_sample_v8"]
-	path = cudnn_sample_v8
-	url = git@github.com:YukeWang96/cudnn_sample_v8.git
+[submodule "APNN-TC-kernel"]
+	path = APNN-TC-kernel
+	url = git@github.com:YukeWang96/APNN-TC-kernel.git
