--- a/cutlass_kernel/Makefile
+++ b/cutlass_kernel/Makefile
@@ -1,16 +1,17 @@
 INC = 	-I../cutlass/include\
 		-I../cutlass/tools/util/include \
 		-I../cutlass/examples/common
+
 FLAG= -std=c++11 -O3 -w -arch=sm_86 
 
-all: bench_gemm \
-	bench_conv \
+all: bench_gemm.bin \
+	 bench_conv.bin \
 
-bench_gemm: bench_gemm.cu 
+bench_gemm.bin: bench_gemm.cu 
 	nvcc $(INC) $(FLAG) $< -o $@
 
-bench_conv: bench_conv.cu 
+bench_conv.bin: bench_conv.cu 
 	nvcc $(INC) $(FLAG) $< -o $@ 
 	
 clean:
-	rm -r bench_gemm bench_conv 
+	rm -rf *.bin 
